{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 9,
  "lineage": "4042db97-19b3-abde-2aab-32d77be7e802",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033686d6d9fd34167",
            "arn": "arn:aws:ec2:ap-south-1:665132301131:instance/i-05e5058560fd744d1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05e5058560fd744d1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformprivatekey",
            "monitoring": false,
            "primary_network_interface_id": "eni-09dfd20e7e768cfa0",
            "private_dns": "ip-172-12-1-18.ap-south-1.compute.internal",
            "private_ip": "172.12.1.18",
            "public_dns": "ec2-13-126-213-51.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.213.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a785425d8e8706da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e7e7f1775b1a7ef6",
            "tags": {
              "Name": "webappserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a962e588740a4212"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09d24ad4527c7b90f",
            "owner_id": "665132301131",
            "tags": {
              "Name": "manoj-VPC IGW"
            },
            "vpc_id": "vpc-04ffcec7adef6c103"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0acf43a73959aad93",
            "owner_id": "665132301131",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d24ad4527c7b90f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-04ffcec7adef6c103"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fad73d0b8b1ac39",
            "route_table_id": "rtb-0acf43a73959aad93",
            "subnet_id": "subnet-0e7e7f1775b1a7ef6"
          },
          "depends_on": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665132301131:security-group/sg-0a962e588740a4212",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a962e588740a4212",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "manojsg_test",
            "name_prefix": null,
            "owner_id": "665132301131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebApp Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffcec7adef6c103"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665132301131:subnet/subnet-0e7e7f1775b1a7ef6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.12.1.0/24",
            "id": "subnet-0e7e7f1775b1a7ef6",
            "map_public_ip_on_launch": false,
            "owner_id": "665132301131",
            "tags": {
              "Name": "WebApp Public Subnet"
            },
            "vpc_id": "vpc-04ffcec7adef6c103"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665132301131:vpc/vpc-04ffcec7adef6c103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.12.0.0/16",
            "default_network_acl_id": "acl-02b360ec1df63c4a4",
            "default_route_table_id": "rtb-078b63b29c8299134",
            "default_security_group_id": "sg-09d18df8f6eacc92a",
            "dhcp_options_id": "dopt-f48e6d9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ffcec7adef6c103",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-078b63b29c8299134",
            "owner_id": "665132301131",
            "tags": {
              "Name": "manoj-test-vpc"
            }
          }
        }
      ]
    }
  ]
}